# poc-drf

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
address/: models.py
address/api/: serializers.py  viewsets.py
address/migrations/: 0001_initial.py  0002_alter_address_updated_at.py
app/: .coveragerc  conftest.py  pytest.ini  settings.py  urls.py  wsgi.py
app/location/: client.py  constants.py  exceptions.py  extensions.py  views.py
app/review/: admin.py  apps.py
app/templates/: swagger-ui.html
app/tourist_place/: admin.py  apps.py  models.py
core/: admin.py  models.py
core/api/: serializers.py  viewsets.py
core/migrations/: 0001_initial.py  0002_alter_touristplaces_approved.py  0002_auto_20210916_0233.py  0003_alter_touristplace_updated_at.py  0003_touristplaces_resources.py  0004_touristplace_address.py  0005_alter_touristplace_address.py  0006_touristplace_image.py
docs/: README.md  deploy-django-app-at-heroku.md
feedly_clone/: apps.py  models.py
location/: client.py  views.py
rating/: models.py
rating/api/: serializers.py  viewsets.py
rating/migrations/: 0001_initial.py
resource/: models.py
resource/api/: serializers.py  viewsets.py
resource/migrations/: 0001_initial.py  0002_alter_resource_updated_at.py  0003_resource_image.py
resources/: models.py
review/: actions.py  admin.py  models.py
review/api/: serializers.py  (+1 more)
scripts/: mr-linter.sh  start-local-server.sh  verify-db-entrypoint.sh
src/: settings.py  urls.py  wsgi.py
templates/: swagger-ui.html
(+21 files in other folders)
